--- a/steam_deliverable.ipynb
+++ b/steam_deliverable.ipynb
@@ -4613,7 +4613,7 @@
    "source": [
     "- What the currency is is unclear, but it doesn't seem to be either € or £. It could be ¥ (Japanese Yen).\n",
     "- Assuming ¥, many games are free to download (presumably with in-game purchases) and most have a price below ¥1,000 (~€5.75).\n",
-    "- There are spikes in the distribution of prices at every \\\\(500n-1\\\\). It makes sense that there would be many games with these prices, as 1,000 is a nice, round power of ten, because 500 is a nice half of that, and because it is very common to lower a price a tiny bit to make an item look cheaper.\n",
+    "- There are spikes in the distribution of prices at every $500n-1$. It makes sense that there would be many games with these prices, as 1,000 is a nice, round power of ten, because 500 is a nice half of that, and because it is very common to lower a price a tiny bit to make an item look cheaper.\n",
     "- There are also a few outliers. The bar plot above is filtered to only display prices up to ¥10,000, but there are a few outliers in the data pricing above that and up to ¥100,000."
    ]
   },
